# step-wise

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: unit-tests.yml
docs/: RELEASE.md  index.html  privacy.html  terms.html
docs/assets/: site.css
docs/shots/: dashboard.html  settings.html
scripts/: merge-manifest.mjs  release-mac.sh  release-win.ps1
src/: App.tsx  activeMode.ts  format.ts  goal.ts  main.tsx  mockData.ts  openExternal.ts  platform.ts  refreshInterval.ts  tauriReady.ts  theme.ts  types.ts  useOpenSignal.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: health.rs  mod.rs  system.rs
src-tauri/src/encryption/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/health/: demo.rs  google.rs  mod.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/: api_probe.rs  health_test.rs
src-tauri/tests/common/: mod.rs
src/components/: ConnectedView.tsx  Header.tsx  Hero.tsx  HourlyBars.tsx  HoverPopover.tsx  MetricCards.tsx  Panel.tsx  Ring.tsx  Settings.tsx  WeekStrip.tsx  icons.tsx
src/hooks/: useHealth.ts  useLaunchOnStartup.ts  useTauriCommand.ts  useUpdater.ts
src/styles/: panel.css  theme.css
updater/: latest.json
(+5 files in other folders)
